# half

./: .gitignore  .travis.yml  CHANGELOG.markdown  Numeric-Half.html  README.markdown  cabal.haskell-ci  doc-index.html  half.cabal  half.haddock  index-frames.html  index.html  mini_Numeric-Half.html
.github/workflows/: haskell-ci.yml
cbits/: half.c
src/: Numeric-Half.html
src/Numeric/: Half.hs
src/Numeric/Half/: Internal.hs
test/: Spec.hs
