cabal-version: >=1.8
name: half
version: 0.3
license: BSD3
license-file: LICENSE
copyright: Copyright (C) 2014 Edward A. Kmett
maintainer: Edward A. Kmett <ekmett@gmail.com>
author: Edward A. Kmett
stability: provisional
homepage: http://github.com/ekmett/half
bug-reports: http://github.com/ekmett/half/issues
synopsis: Half-precision floating-point
description:
    Half-precision floating-point.
category: Numeric
build-type: Simple
extra-source-files:
    .travis.yml
    .gitignore
    README.markdown
    CHANGELOG.markdown

source-repository head
    type: git
    location: git://github.com/ekmett/half.git

flag cross
    description:
        Disable Template Haskell to make cross-compilation easier
    default: False
    manual: True

library
    exposed-modules:
        Numeric.Half
    c-sources:
        cbits/half.c
    hs-source-dirs: src
    other-extensions: BangPatterns CPP DeriveDataTypeable DeriveGeneric
                      ForeignFunctionInterface
    ghc-options: -Wall -fwarn-tabs -O2
    build-depends:
        base >=4.3 && <5,
        template-haskell -any

    if !flag(cross)
        cpp-options: -DWITH_TEMPLATE_HASKELL
        other-extensions: TemplateHaskell

    if impl(ghc >=7.8)
        other-extensions: PatternSynonyms

    if impl(ghc >=7.8)
        build-depends:
            deepseq >=1.4 && <1.5

    if impl(ghc <7.6)
        build-depends:
            ghc-prim -any

    if impl(ghc >=8)
        ghc-options: -Wno-missing-pattern-synonym-signatures

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    ghc-options: -Wall

    if impl(ghc >=7.8)
        build-depends:
            base >=4.3 && <5,
            half -any,
            hspec >=2.4,
            QuickCheck >=2.9
    else
        buildable: False
